--- a/Home.html
+++ b/Home.html
@@ -685,7 +685,129 @@
                 </ul>
             </div>
             <div class="jiadianMain" id="jd4" style="display: none;">
-                家居
+                <ul>
+                    <li>
+                        <a href=""><img src="img/jiaju/jiaju1.jpg" alt="">
+                            <p class="Phonetxt1">jiaju1</p>
+                            <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="40" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><img src="img/jiaju/jiaju2.jpg" alt="">
+                            <p class="Phonetxt1">jiaju2</p>
+                            <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="41" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><img src="img/jiaju/jiaju3.jpg" alt="">
+                            <p class="Phonetxt1">jiaju3</p>
+                            <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="42" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><img src="img/jiaju/jiaju4.jpg" alt="">
+                            <p class="Phonetxt1">jiaju4</p>
+                            <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="43" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+                    <a href="">
+                        <div class="EndList">
+                            <a href="">
+                                <li style="height: 143px;">
+                                    <h5>智能 LED 吸顶灯</h5>
+                                    <p>329元</p>
+                                    <div>
+                                        <img src="img/jiaju/jiaju8.png" alt="" style="width: 90px;">
+                                    </div>
+                                </li>
+                            </a>
+                            <a href="">
+                                <li style="height: 143px;">
+                                    <h3>浏览更多</h3>
+                                    <h4>热门</h4>
+                                    <div>
+                                        <i class="fa fa-angle-right icon1" aria-hidden="true"></i>
+                                    </div>
+                                </li>
+                            </a>
+                        </div>
+                    </a>
+                    <li>
+                        <a href=""><img src="img/jiaju/jiaju6.jpg" alt="">
+                            <p class="Phonetxt1">jiaju6</p>
+                            <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="46" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><img src="img/jiaju/jiaju7.jpg" alt="">
+                            <p class="Phonetxt1">jiaju7</p>
+                            <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="47" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href=""><img src="img/jiaju/jiaju8.png" alt="">
+                            <p class="Phonetxt1">jiaju8</p>
+                            <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                            <p class="Phonetxt3">
+                                <span style="color: #ff6700;">2999元</span>
+                                <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                            </p>
+                            <div class="hiddenDiv" id="48" >
+                                <p style="padding-top: 10px;">不错非常棒！</p>
+                                <p>来自海海的评论</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
 
