--- a/Home.html
+++ b/Home.html
@@ -1362,7 +1362,7 @@
             <div class="jiadianMain" id="jd001" style="display: block;">
                 <ul>
                     <li>
-                        <a href=""><img src="img/smart/remen1.png" alt="">
+                        <a href=""><img src="img/dapei/remen1.jpg" alt="">
                             <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1376,7 +1376,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/smart/remen2.jpg" alt="">
+                        <a href=""><img src="img/dapei/remen2.jpg" alt="">
                             <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1390,7 +1390,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/smart/remen3.jpg" alt="">
+                        <a href=""><img src="img/dapei/remen3.jpg" alt="">
                             <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1404,7 +1404,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/smart/remen4.png" alt="">
+                        <a href=""><img src="img/dapei/remen4.jpg" alt="">
                             <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1424,7 +1424,7 @@
                                     <h5>小米净水器</h5>
                                     <p>1999元</p>
                                     <div>
-                                        <img src="img/smart/remen8.jpg" alt="" style="width: 90px;">
+                                        <img src="img/dapei/remen8.jpg" alt="" style="width: 90px;">
                                     </div>
                                 </li>
                             </a>
@@ -1440,7 +1440,7 @@
                         </div>
                     </a>
                     <li>
-                        <a href=""><img src="img/smart/remen5.jpg" alt="">
+                        <a href=""><img src="img/dapei/remen5.jpg" alt="">
                             <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1454,7 +1454,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/smart/remen6.jpg" alt="">
+                        <a href=""><img src="img/dapei/remen6.jpg" alt="">
                             <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1469,7 +1469,7 @@
                     </li>
 
                     <li>
-                        <a href=""><img src="img/smart/remen7.jpg" alt="">
+                        <a href=""><img src="img/dapei/remen7.jpg" alt="">
                             <p class="Phonetxt1">小米MIX 2 全陶瓷尊享版</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1487,7 +1487,7 @@
             <div class="jiadianMain" id="jd002" style="display: none;">
                 <ul>
                     <li>
-                        <a href=""><img src="img/smart/chuxing1.jpg" alt="">
+                        <a href=""><img src="img/dapei/erji1.jpg" alt="">
                             <p class="Phonetxt1">jiadian1</p>
                             <p class="Phonetxt2">全面屏2222.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1501,7 +1501,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/smart/chuxing2.jpg" alt="">
+                        <a href=""><img src="img/dapei/erji2.jpg" alt="">
                             <p class="Phonetxt1">jiadian2</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1515,7 +1515,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/smart/chuxing3.jpg" alt="">
+                        <a href=""><img src="img/dapei/erji3.jpg" alt="">
                             <p class="Phonetxt1">jiadian3</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1529,7 +1529,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/smart/chuxing4.jpg" alt="">
+                        <a href=""><img src="img/dapei/erji4.jpg" alt="">
                             <p class="Phonetxt1">jiadian4</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1549,7 +1549,7 @@
                                     <h5>小米盒子</h5>
                                     <p>299元</p>
                                     <div>
-                                        <img src="img/smart/chuxing8.jpg" alt="" style="width: 90px;">
+                                        <img src="img/dapei/erji8.jpg" alt="" style="width: 90px;">
                                     </div>
                                 </li>
                             </a>
@@ -1565,7 +1565,7 @@
                         </div>
                     </a>
                     <li>
-                        <a href=""><img src="img/smart/chuxing5.jpg" alt="">
+                        <a href=""><img src="img/dapei/erji5.jpg" alt="">
                             <p class="Phonetxt1">jiadian5</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1579,7 +1579,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/smart/chuxing6.jpg" alt="">
+                        <a href=""><img src="img/dapei/erji6.jpg" alt="">
                             <p class="Phonetxt1">jiadian6</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1594,7 +1594,7 @@
                     </li>
 
                     <li>
-                        <a href=""><img src="img/smart/chuxing7.jpg" alt="">
+                        <a href=""><img src="img/dapei/erji7.jpg" alt="">
                             <p class="Phonetxt1">jiadian7</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1612,7 +1612,7 @@
             <div class="jiadianMain" id="jd003" style="display: none;">
                 <ul>
                     <li>
-                        <a href=""><img src="img/smart/remen2.jpg" alt="">
+                        <a href=""><img src="img/dapei/power1.jpg" alt="">
                             <p class="Phonetxt1">dn1</p>
                             <p class="Phonetxt2">全面屏2222.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1626,7 +1626,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/smart/remen5.jpg" alt="">
+                        <a href=""><img src="img/dapei/power2.jpg" alt="">
                             <p class="Phonetxt1">dn2</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1640,7 +1640,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/smart/remen1.png" alt="">
+                        <a href=""><img src="img/dapei/power3.jpg" alt="">
                             <p class="Phonetxt1">dn3</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1654,7 +1654,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/smart/jiankang5.jpg" alt="">
+                        <a href=""><img src="img/dapei/power4.jpg" alt="">
                             <p class="Phonetxt1">dn4</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1674,7 +1674,7 @@
                                     <h5>多功能转接器</h5>
                                     <p>199元</p>
                                     <div>
-                                        <img src="img/smart/jiankang.jpg" alt="" style="width: 90px;">
+                                        <img src="img/dapei/power8.jpg" alt="" style="width: 90px;">
                                     </div>
                                 </li>
                             </a>
@@ -1690,7 +1690,7 @@
                         </div>
                     </a>
                     <li>
-                        <a href=""><img src="img/smart/jiankang4.jpg" alt="">
+                        <a href=""><img src="img/dapei/power5.jpg" alt="">
                             <p class="Phonetxt1">dn5</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1704,7 +1704,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/smart/jiankang2.jpg" alt="">
+                        <a href=""><img src="img/dapei/power6.jpg" alt="">
                             <p class="Phonetxt1">dn6</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1719,7 +1719,7 @@
                     </li>
 
                     <li>
-                        <a href=""><img src="img/smart/jiankang3.jpg" alt="">
+                        <a href=""><img src="img/dapei/power7.jpg" alt="">
                             <p class="Phonetxt1">dn7</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1737,7 +1737,7 @@
             <div class="jiadianMain" id="jd004" style="display: none;">
                 <ul>
                     <li>
-                        <a href=""><img src="img/smart/luyou1.jpg" alt="">
+                        <a href=""><img src="img/dapei/sd1.jpg" alt="">
                             <p class="Phonetxt1">jiaju1</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1751,7 +1751,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/smart/luyou2.jpg" alt="">
+                        <a href=""><img src="img/dapei/sd2.jpg" alt="">
                             <p class="Phonetxt1">jiaju2</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1765,7 +1765,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/smart/luyou3.jpg" alt="">
+                        <a href=""><img src="img/dapei/sd3.jpg" alt="">
                             <p class="Phonetxt1">jiaju3</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1779,7 +1779,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/smart/luyou4.jpg" alt="">
+                        <a href=""><img src="img/dapei/sd4.jpg" alt="">
                             <p class="Phonetxt1">jiaju4</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1799,7 +1799,7 @@
                                     <h5>智能 LED 吸顶灯</h5>
                                     <p>329元</p>
                                     <div>
-                                        <img src="img/smart/luyou8.jpg" alt="" style="width: 90px;">
+                                        <img src="img/dapei/sd8.jpg" alt="" style="width: 90px;">
                                     </div>
                                 </li>
                             </a>
@@ -1815,7 +1815,7 @@
                         </div>
                     </a>
                     <li>
-                        <a href=""><img src="img/smart/luyou6.jpg" alt="">
+                        <a href=""><img src="img/dapei/sd6.jpg" alt="">
                             <p class="Phonetxt1">jiaju6</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1829,7 +1829,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href=""><img src="img/smart/luyou7.jpg" alt="">
+                        <a href=""><img src="img/dapei/sd7.jpg" alt="">
                             <p class="Phonetxt1">jiaju7</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
@@ -1844,7 +1844,7 @@
                     </li>
 
                     <li>
-                        <a href=""><img src="img/smart/luyou5.jpg" alt="">
+                        <a href=""><img src="img/dapei/sd5.jpg" alt="">
                             <p class="Phonetxt1">jiaju8</p>
                             <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
                             <p class="Phonetxt3">
