--- a/Home.html
+++ b/Home.html
@@ -1862,6 +1862,152 @@
         </div>
     </div>
 
+    <div class="tuijian">
+        <div class="banner5">
+            <img src="img/banner/banner5.jpg" alt="">
+        </div>
+        <div class="tuijianTop">
+            <span>为您推荐</span>
+        </div>
+        <div class="tuijianBody">
+            <ul>
+                <li>
+                    <a href=""><img src="img/dapei/sd1.jpg" alt="">
+                        <p class="Phonetxt1">jiaju1</p>
+                        <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                        <p class="Phonetxt3">
+                            <span style="color: #ff6700;">2999元</span>
+                            <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                        </p>
+                        <div class="hiddenDiv" id="4440" >
+                            <p style="padding-top: 10px;">不错非常棒！</p>
+                            <p>来自海海的评论</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href=""><img src="img/dapei/sd1.jpg" alt="">
+                        <p class="Phonetxt1">jiaju1</p>
+                        <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                        <p class="Phonetxt3">
+                            <span style="color: #ff6700;">2999元</span>
+                            <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                        </p>
+                        <div class="hiddenDiv" id="4440" >
+                            <p style="padding-top: 10px;">不错非常棒！</p>
+                            <p>来自海海的评论</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href=""><img src="img/dapei/sd1.jpg" alt="">
+                        <p class="Phonetxt1">jiaju1</p>
+                        <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                        <p class="Phonetxt3">
+                            <span style="color: #ff6700;">2999元</span>
+                            <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                        </p>
+                        <div class="hiddenDiv" id="4440" >
+                            <p style="padding-top: 10px;">不错非常棒！</p>
+                            <p>来自海海的评论</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href=""><img src="img/dapei/sd1.jpg" alt="">
+                        <p class="Phonetxt1">jiaju1</p>
+                        <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                        <p class="Phonetxt3">
+                            <span style="color: #ff6700;">2999元</span>
+                            <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                        </p>
+                        <div class="hiddenDiv" id="4440" >
+                            <p style="padding-top: 10px;">不错非常棒！</p>
+                            <p>来自海海的评论</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href=""><img src="img/dapei/sd1.jpg" alt="">
+                        <p class="Phonetxt1">jiaju1</p>
+                        <p class="Phonetxt2">全面屏2.0，Unibody 全陶瓷</p>
+                        <p class="Phonetxt3">
+                            <span style="color: #ff6700;">2999元</span>
+                            <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
+                        </p>
+                        <div class="hiddenDiv" id="4440" >
+                            <p style="padding-top: 10px;">不错非常棒！</p>
+                            <p>来自海海的评论</p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="repingTop">
+            <span>热评产品</span>
+        </div>
+        <div class="repingBody">
+                <ul>
+                    <li>
+                        <a href="">
+                            <img src="img/reping/reping01.jpg" alt="">
+                            <p class="Repingtxt1">
+                                包装很让人感动，式样也很可爱，做出的饭全家人都爱吃，超爱五星！手机控制还是不太熟练
+                            </p>
+                            <p class="Repingtxt2">来自海海的评论</p>
+                            <p class="Repingtxt3">
+                                <span style="color: #000000;">米家压力IH电饭煲</span>
+                                <span style="padding: 6px;color: #a9a9a9;"> | </span>
+                                <span style="color: #ff6700;">2999元</span>
+                            </p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="img/reping/reping02.jpg" alt="">
+                            <p class="Repingtxt1">
+                                包装很让人感动，式样也很可爱，做出的饭全家人都爱吃，超爱五星！手机控制还是不太熟练
+                            </p>
+                            <p class="Repingtxt2">来自海海的评论</p>
+                            <p class="Repingtxt3">
+                                <span style="color: #000000;">米家压力IH电饭煲</span>
+                                <span style="padding: 6px;color: #a9a9a9;"> | </span>
+                                <span style="color: #ff6700;">2999元</span>
+                            </p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="img/reping/reping03.jpg" alt="">
+                            <p class="Repingtxt1">
+                                包装很让人感动，式样也很可爱，做出的饭全家人都爱吃，超爱五星！手机控制还是不太熟练
+                            </p>
+                            <p class="Repingtxt2">来自海海的评论</p>
+                            <p class="Repingtxt3">
+                                <span style="color: #000000;">米家压力IH电饭煲</span>
+                                <span style="padding: 6px;color: #a9a9a9;"> | </span>
+                                <span style="color: #ff6700;">2999元</span>
+                            </p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="img/reping/reping04.jpg" alt="">
+                            <p class="Repingtxt1">
+                                包装很让人感动，式样也很可爱，做出的饭全家人都爱吃，超爱五星！手机控制还是不太熟练
+                            </p>
+                            <p class="Repingtxt2">来自海海的评论</p>
+                            <p class="Repingtxt3">
+                                <span style="color: #000000;">米家压力IH电饭煲</span>
+                                <span style="padding: 6px;color: #a9a9a9;"> | </span>
+                                <span style="color: #ff6700;">2999元</span>
+                            </p>
+                        </a>
+                    </li>
+                </ul>
+        </div>
+    </div>
+
 
 </div>
 
