--- a/Home.html
+++ b/Home.html
@@ -2009,6 +2009,13 @@
     </div>
 
 
+    <div class="bottom">
+        <div class="baoxiu">
+            保修
+        </div>
+    </div>
+
+
 </div>
 
 <script src="js/jquery-3.3.1.min.js"></script>
