--- a/Home.html
+++ b/Home.html
@@ -1879,10 +1879,6 @@
                             <span style="color: #ff6700;">2999元</span>
                             <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
                         </p>
-                        <div class="hiddenDiv" id="4440" >
-                            <p style="padding-top: 10px;">不错非常棒！</p>
-                            <p>来自海海的评论</p>
-                        </div>
                     </a>
                 </li>
                 <li>
@@ -1893,10 +1889,6 @@
                             <span style="color: #ff6700;">2999元</span>
                             <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
                         </p>
-                        <div class="hiddenDiv" id="4440" >
-                            <p style="padding-top: 10px;">不错非常棒！</p>
-                            <p>来自海海的评论</p>
-                        </div>
                     </a>
                 </li>
                 <li>
@@ -1907,10 +1899,6 @@
                             <span style="color: #ff6700;">2999元</span>
                             <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
                         </p>
-                        <div class="hiddenDiv" id="4440" >
-                            <p style="padding-top: 10px;">不错非常棒！</p>
-                            <p>来自海海的评论</p>
-                        </div>
                     </a>
                 </li>
                 <li>
@@ -1921,10 +1909,6 @@
                             <span style="color: #ff6700;">2999元</span>
                             <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
                         </p>
-                        <div class="hiddenDiv" id="4440" >
-                            <p style="padding-top: 10px;">不错非常棒！</p>
-                            <p>来自海海的评论</p>
-                        </div>
                     </a>
                 </li>
                 <li>
@@ -1935,10 +1919,6 @@
                             <span style="color: #ff6700;">2999元</span>
                             <span style="text-decoration: line-through;color: #a9a9a9;">4699元</span>
                         </p>
-                        <div class="hiddenDiv" id="4440" >
-                            <p style="padding-top: 10px;">不错非常棒！</p>
-                            <p>来自海海的评论</p>
-                        </div>
                     </a>
                 </li>
             </ul>
@@ -2011,7 +1991,40 @@
 
     <div class="bottom">
         <div class="baoxiu">
-            保修
+            <span class="sp1">
+                <a href="">
+                <img src="img/icon/gift.png" alt="">
+                预约维修服务
+                </a>
+            </span>
+            <span class="sp2"> | </span>
+            <span class="sp1">
+                <a href="">
+                <img src="img/icon/gift.png" alt="">
+                7天无理由退货
+                </a>
+            </span>
+            <span class="sp2"> | </span>
+            <span class="sp1">
+                <a href="">
+                <img src="img/icon/gift.png" alt="">
+                15天免费换货
+                </a>
+            </span>
+            <span class="sp2"> | </span>
+            <span class="sp1">
+                <a href="">
+                <img src="img/icon/gift.png" alt="">
+                满150元包邮
+                </a>
+            </span>
+            <span class="sp2"> | </span>
+            <span class="sp1">
+                <a href="">
+                <img src="img/icon/gift.png" alt="">
+                520余家售后网点
+                </a>
+            </span>
         </div>
     </div>
 
