--- a/Home.html
+++ b/Home.html
@@ -2027,7 +2027,51 @@
             </span>
         </div>
         <div class="bottomMenu">
-            menu
+            <div class="btm1">
+                <div>
+                    <ul>
+                        <li style="color: #000000;font-size: 14px;margin-bottom:10px;">帮助中心</li>
+                        <li><a href="">账户管理</a></li>
+                        <li><a href="">购物指南</a></li>
+                        <li><a href="">订单操作</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li style="color: #000000;font-size: 14px;margin-bottom:10px;">服务支持</li>
+                        <li><a href="">售后政策</a></li>
+                        <li><a href="">自助服务</a></li>
+                        <li><a href="">相关下载</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li style="color: #000000;font-size: 14px;margin-bottom:10px;">线下门店</li>
+                        <li><a href="">小米之家</a></li>
+                        <li><a href="">服务网点</a></li>
+                        <li><a href="">授权体验店</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li style="color: #000000;font-size: 14px;margin-bottom:10px;">关于小米</li>
+                        <li><a href="">了解小米</a></li>
+                        <li><a href="">加入小米</a></li>
+                        <li><a href="">投资者关系</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li style="color: #000000;font-size: 14px;margin-bottom:10px;">关注我们</li>
+                        <li><a href="">新浪微博</a></li>
+                        <li><a href="">官方微信</a></li>
+                        <li><a href="">联系我们</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="btm2">
+                right
+            </div>
         </div>
     </div>
 
