底部菜单修改

--- a/Home.html
+++ b/Home.html
@@ -2070,11 +2070,18 @@
                 </div>
             </div>
             <div class="btm2">
-                right
+                <div class="btmRight">
+                    <p class="btmTxt1">400-100-5678</p>
+                    <p class="btmTxt2">周一至周日 8:00-18:00</p>
+                    <p class="btmTxt2">（仅收市话费）</p>
+                    <a href=""><div class="btmButton">联系客服</div></a>
+                </div>
             </div>
         </div>
     </div>
-
+    <div class="">
+        asd
+    </div>
 
 </div>
 
