--- a/Home.html
+++ b/Home.html
@@ -2079,8 +2079,13 @@
             </div>
         </div>
     </div>
-    <div class="">
-        asd
+    <div class="bottomLogo">
+        <div>
+            <img src="img/logo.png" alt="">
+        </div>
+        <div style="margin-top: 40px;padding-left: 20px;">
+            This site is code by Tianjihai.
+        </div>
     </div>
 
 </div>
