--- a/Home.html
+++ b/Home.html
@@ -2084,7 +2084,7 @@
             <img src="img/logo.png" alt="">
         </div>
         <div style="margin-top: 40px;padding-left: 20px;">
-            This site is code by Tianjihai.
+            This website is code by Tianjihai.
         </div>
     </div>
 
