--- a/Home.html
+++ b/Home.html
@@ -194,7 +194,51 @@
                 <li>笔记本 平板
                     <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
                     <div id="2" class="MenuCenter">
-                        小米电脑电脑都能
+                        <a href="">
+                            <span>
+                                <img src="img/diannao.jpg" alt=""> 小米笔记本电脑
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/diannao.jpg" alt=""> 小米笔记本电脑
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/diannao.jpg" alt=""> 小米笔记本电脑
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/diannao.jpg" alt=""> 小米笔记本电脑
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/diannao.jpg" alt=""> 小米笔记本电脑
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/diannao.jpg" alt=""> 小米笔记本电脑
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/diannao.jpg" alt=""> 小米笔记本电脑
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/diannao.jpg" alt=""> 小米笔记本电脑
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/diannao.jpg" alt=""> 小米笔记本电脑
+                            </span>
+                        </a>
                     </div>
                 </li>
                 <li>家电 插线板
