--- a/Home.html
+++ b/Home.html
@@ -244,19 +244,111 @@
                 <li>家电 插线板
                     <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
                     <div id="3" class="MenuCenter">
-                        小米家电啊
+                        <a href="">
+                            <span>
+                                <img src="img/aircon.jpg" alt=""> 小米空气净化器
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/aircon.jpg" alt=""> 小米空气净化器
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/aircon.jpg" alt=""> 小米空气净化器
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/aircon.jpg" alt=""> 小米空气净化器
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/aircon.jpg" alt=""> 小米空气净化器
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/aircon.jpg" alt=""> 小米空气净化器
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/aircon.jpg" alt=""> 小米空气净化器
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/aircon.jpg" alt=""> 小米空气净化器
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/aircon.jpg" alt=""> 小米空气净化器
+                            </span>
+                        </a>
                     </div>
                 </li>
                 <li>出行 穿戴
                     <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
                     <div id="4" class="MenuCenter">
-                        小米手环！
+                        <a href="">
+                            <span>
+                                <img src="img/pingheng.jpg" alt=""> 小米平衡车
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/pingheng.jpg" alt=""> 小米平衡车
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/pingheng.jpg" alt=""> 小米平衡车
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/pingheng.jpg" alt=""> 小米平衡车
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/pingheng.jpg" alt=""> 小米平衡车
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/pingheng.jpg" alt=""> 小米平衡车
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/pingheng.jpg" alt=""> 小米平衡车
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/pingheng.jpg" alt=""> 小米平衡车
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/pingheng.jpg" alt=""> 小米平衡车
+                            </span>
+                        </a>
                     </div>
                 </li>
                 <li>智能 路由器
                     <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
                     <div id="5" class="MenuCenter">
-                        小米路由器！
+                        <a href="">
+                            <span>
+                                <img src="img/luyouqi.jpg" alt=""> 小米路由器
+                            </span>
+                        </a>
                     </div>
                 </li>
                 <li>电源 配件
