--- a/Home.html
+++ b/Home.html
@@ -349,30 +349,246 @@
                                 <img src="img/luyouqi.jpg" alt=""> 小米路由器
                             </span>
                         </a>
+                        <a href="">
+                            <span>
+                                <img src="img/luyouqi.jpg" alt=""> 小米路由器
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/luyouqi.jpg" alt=""> 小米路由器
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/luyouqi.jpg" alt=""> 小米路由器
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/luyouqi.jpg" alt=""> 小米路由器
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/luyouqi.jpg" alt=""> 小米路由器
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/luyouqi.jpg" alt=""> 小米路由器
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/luyouqi.jpg" alt=""> 小米路由器
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/luyouqi.jpg" alt=""> 小米路由器
+                            </span>
+                        </a>
                     </div>
                 </li>
                 <li>电源 配件
                     <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
                     <div id="6" class="MenuCenter">
-                        小米插排！
+                        <a href="">
+                            <span>
+                                <img src="img/dianyuan.jpg" alt=""> 小米移动电源
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/dianyuan.jpg" alt=""> 小米移动电源
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/dianyuan.jpg" alt=""> 小米移动电源
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/dianyuan.jpg" alt=""> 小米移动电源
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/dianyuan.jpg" alt=""> 小米移动电源
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/dianyuan.jpg" alt=""> 小米移动电源
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/dianyuan.jpg" alt=""> 小米移动电源
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/dianyuan.jpg" alt=""> 小米移动电源
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/dianyuan.jpg" alt=""> 小米移动电源
+                            </span>
+                        </a>
                     </div>
                 </li>
                 <li>个护 儿童
                     <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
                     <div id="7" class="MenuCenter">
-                        小米手表
+                        <a href="">
+                            <span>
+                                <img src="img/tizhong.jpg" alt=""> 小米体重秤
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/tizhong.jpg" alt=""> 小米体重秤
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/tizhong.jpg" alt=""> 小米体重秤
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/tizhong.jpg" alt=""> 小米体重秤
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/tizhong.jpg" alt=""> 小米体重秤
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/tizhong.jpg" alt=""> 小米体重秤
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/tizhong.jpg" alt=""> 小米体重秤
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/tizhong.jpg" alt=""> 小米体重秤
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/tizhong.jpg" alt=""> 小米体重秤
+                            </span>
+                        </a>
                     </div>
                 </li>
                 <li>耳机 音响
                     <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
                     <div id="8" class="MenuCenter">
-                        小米蓝牙音箱
+                        <a href="">
+                            <span>
+                                <img src="img/erji.jpg" alt=""> 头戴式耳机
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/erji.jpg" alt=""> 头戴式耳机
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/erji.jpg" alt=""> 头戴式耳机
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/erji.jpg" alt=""> 头戴式耳机
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/erji.jpg" alt=""> 头戴式耳机
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/erji.jpg" alt=""> 头戴式耳机
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/erji.jpg" alt=""> 头戴式耳机
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/erji.jpg" alt=""> 头戴式耳机
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/erji.jpg" alt=""> 头戴式耳机
+                            </span>
+                        </a>
                     </div>
                 </li>
                 <li>生活 箱包
                     <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
                     <div id="9" class="MenuCenter">
-                        小米拉杆箱
+                        <a href="">
+                            <span>
+                                <img src="img/tixu.jpg" alt=""> 小米服饰
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/tixu.jpg" alt=""> 小米服饰
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/tixu.jpg" alt=""> 小米服饰
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/tixu.jpg" alt=""> 小米服饰
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/tixu.jpg" alt=""> 小米服饰
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/tixu.jpg" alt=""> 小米服饰
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/tixu.jpg" alt=""> 小米服饰
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/tixu.jpg" alt=""> 小米服饰
+                            </span>
+                        </a>
+                        <a href="">
+                            <span>
+                                <img src="img/tixu.jpg" alt=""> 小米服饰
+                            </span>
+                        </a>
                     </div>
                 </li>
             </ul>
@@ -2322,7 +2538,7 @@
         <div>
             <img src="img/logo.png" alt="">
         </div>
-        <div style="margin-top: 40px;padding-left: 20px;">
+        <div style="margin-top: 40px;padding-left: 20px;font-size: 16px;">
             This website is code by Tianjihai.
         </div>
     </div>
